package com.kailash.tutorial.swing.ch28.model;

public enum AgeCategory {
    child, adult, senior
}
