package com.kailash.tutorial.swing.ch28.model;

public enum EmploymentCategory {
    employed, selfEmployed, unemployed, other
}
