package com.kailash.tutorial.swing.ch28.model;

public enum Gender {
    male, female
}
