@startuml

title __MODEL's Class Diagram__\n

  namespace com.kailash.tutorial.swing {
    namespace ch2 {
      namespace .model {
        enum AgeCategory {
          adult
          child
          senior
        }
      }
    }
  }
  

  namespace com.kailash.tutorial.swing {
    namespace ch2 {
      namespace .model {
        class com.kailash.tutorial.swing.ch28.model.Database {
            - people : List<Person>
            + Database()
            + addPerson()
            + getPeople()
            + loadFromFile()
            + removePerson()
            + saveToFile()
        }
      }
    }
  }
  

  namespace com.kailash.tutorial.swing {
    namespace ch2 {
      namespace .model {
        enum EmploymentCategory {
          employed
          other
          selfEmployed
          unemployed
        }
      }
    }
  }
  

  namespace com.kailash.tutorial.swing {
    namespace ch2 {
      namespace .model {
        enum Gender {
          female
          male
        }
      }
    }
  }
  

  namespace com.kailash.tutorial.swing {
    namespace ch2 {
      namespace .model {
        class com.kailash.tutorial.swing.ch28.model.Person {
            {static} - count : int
            - id : int
            - name : String
            - occupation : String
            - taxID : String
            - usCitizen : boolean
            + Person()
            + getAgeCategory()
            {static} + getCount()
            + getEmpCat()
            + getGender()
            + getId()
            + getName()
            + getOccupation()
            + getTaxID()
            + isUsCitizen()
            + setAgeCategory()
            {static} + setCount()
            + setEmpCat()
            + setGender()
            + setId()
            + setName()
            + setOccupation()
            + setTaxID()
            + setUsCitizen()
        }
      }
    }
  }
  

  com.kailash.tutorial.swing.ch28.model.Person .up.|> java.io.Serializable
  com.kailash.tutorial.swing.ch28.model.Person o-- com.kailash.tutorial.swing.ch28.model.AgeCategory : ageCategory
  com.kailash.tutorial.swing.ch28.model.Person o-- com.kailash.tutorial.swing.ch28.model.EmploymentCategory : empCat
  com.kailash.tutorial.swing.ch28.model.Person o-- com.kailash.tutorial.swing.ch28.model.Gender : gender


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
